<resources>
    <string name="app_name">ScienceHack2019Winners</string>
    <string name="title_home">Home</string>
    <string name="title_activities">Activities</string>
    <string name="title_challenges">Challenges</string>
    <string name="title_stats">Stats</string>
    <string name="title_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Stats fragment text -->
    <string name="line_graph">CO2 Emission / Year</string>
    <string name="pie_chart">CO2 Emission / Activity</string>
</resources>
