<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_activities"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_activities" />

    <item
        android:id="@+id/navigation_challenges"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_challenges" />

    <item
        android:id="@+id/navigation_stats"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_stats" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_profile" />

</menu>
